<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200">

    <!-- TODO 01. Define the layout for the MainActivity here. -->
    <!-- NOTE: Remember that in order to include some GUI components you will have to use the Material library -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/scan_chip"
                style="@style/Chip.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_chip"
                app:chipIcon="@drawable/ic_center_focus_weak_chip"
                app:layout_constraintEnd_toStartOf="@id/top_up_chip"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/top_up_chip"
                style="@style/Chip.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_up_chip"
                app:chipIcon="@drawable/ic_add_circle_outline_chip"
                app:layout_constraintEnd_toStartOf="@id/send_chip"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@id/scan_chip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/send_chip"
                style="@style/Chip.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_chip"
                app:chipIcon="@drawable/ic_open_in_new_chip"
                app:layout_constraintEnd_toStartOf="@id/request_chip"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@id/top_up_chip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/request_chip"
                style="@style/Chip.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_chip"
                app:chipIcon="@drawable/ic_open_in_new_rotated_chip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@id/send_chip" />
        </com.google.android.material.chip.ChipGroup>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            style="@style/CardView.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_middle"
            android:layout_marginEnd="@dimen/spacing_middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group"
            app:contentPadding="@dimen/spacing_middle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--first line of card view-->
                <ImageView
                    android:id="@+id/phone_iv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_phone_android"
                    app:layout_constraintBottom_toTopOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/card_tv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pulsa_amp_data"
                    app:layout_constraintBottom_toTopOf="@id/card_tv_2"
                    app:layout_constraintStart_toEndOf="@id/phone_iv" />

                <TextView
                    android:id="@+id/card_tv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bonus_pulsa_50"
                    app:layout_constraintBottom_toTopOf="@id/guideline"
                    app:layout_constraintStart_toEndOf="@id/phone_iv" />

                <Button
                    android:id="@+id/card_button"
                    style="@style/Button.Blue.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/buy_now"
                    app:layout_constraintBottom_toBottomOf="@id/guideline"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="50dp" />

                <!--second line of card view-->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mb_1"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="90dp"
                    android:layout_height="65dp"
                    android:drawableTop="@drawable/ic_lightbulb"
                    android:text="@string/electric"
                    app:layout_constraintEnd_toStartOf="@id/mb_2"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideline" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mb_2"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_monetization_on"
                    android:text="@string/cashout"
                    app:layout_constraintEnd_toStartOf="@id/mb_3"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@id/mb_1"
                    app:layout_constraintTop_toBottomOf="@id/guideline" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mb_3"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_games"
                    android:text="@string/games"
                    app:layout_constraintEnd_toStartOf="@id/mb_4"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@id/mb_2"
                    app:layout_constraintTop_toBottomOf="@id/guideline" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mb_4"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_more_horiz"
                    android:text="@string/see_all"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@id/mb_3"
                    app:layout_constraintTop_toBottomOf="@id/guideline" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/btg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            app:checkedButton="@id/no_discount_btn"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/no_discount_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button.Blue.Group"
                android:text="@string/no_discount" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/discount_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button.Blue.Group"
                android:text="@string/discount" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.cardview.widget.CardView
            android:id="@+id/invoice_card"
            style="@style/CardView.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_middle"
            android:layout_marginEnd="@dimen/spacing_middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btg"
            app:contentPadding="@dimen/spacing_middle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/invoice_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invoice"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:rotation="45"
                    android:src="@drawable/ic_swap_vert"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/invoice_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/invoice_guideline"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/p1_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CheckBox.Blue"
                        android:text="@string/product_1"/>
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/p2_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        style="@style/CheckBox.Blue"
                        android:text="@string/product_2"/>
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/p3_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        style="@style/CheckBox.Blue"
                        android:text="@string/product_3"/>
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/p4_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        style="@style/CheckBox.Blue"
                        android:text="@string/product_4"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/invoice_guideline"
                    app:layout_constraintEnd_toEndOf="parent">
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/invoice_guideline"
                        app:layout_constraintEnd_toEndOf="parent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/p1_et"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/invoice_guideline"
                        app:layout_constraintEnd_toEndOf="parent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/p2_et"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/invoice_guideline"
                        app:layout_constraintEnd_toEndOf="parent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/p3_et"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/invoice_guideline"
                        app:layout_constraintEnd_toEndOf="parent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/p4_et"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/total_button"
            style="@style/Button.Outlined.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_middle"
            android:layout_marginLeft="@dimen/spacing_middle"
            android:onClick="calculateTotal"
            android:text="@string/calculate_total_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/invoice_card" />
        <TextView
            android:id="@+id/total_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/total_button"
            app:layout_constraintTop_toBottomOf="@id/invoice_card"
            android:text="@string/total" />
        <TextView
            android:id="@+id/calculated_total_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_middle"
            android:layout_marginLeft="@dimen/spacing_middle"
            app:layout_constraintStart_toEndOf="@id/total_tv"
            app:layout_constraintTop_toBottomOf="@id/invoice_card" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>